# ai-pkm

./: .gitignore  AGENTS.md  LICENSE  README.md
.agents/skills/anotar/: SKILL.md
.agents/skills/commit-push/: SKILL.md
.agents/skills/criar-grupo/: SKILL.md
.agents/skills/criar-nota/: SKILL.md
.agents/skills/criticar-nota/: SKILL.md
.agents/skills/criticar-url/: SKILL.md
.agents/skills/processar-url/: SKILL.md
.agents/skills/processar-url/scripts/: .gitignore  processar_url.py  pyproject.toml
.agents/skills/readequar-nota/: SKILL.md
.agents/skills/readequar-url/: SKILL.md
.agents/skills/recriar-indices/: SKILL.md
.agents/skills/triar/: SKILL.md
.planning/: PROJECT.md
docs/: architecture.md  logging-policy.md  migration-todo.md  overview.md  pkm-conventions.md  pkm-indexes.md  pkm-naming.md  pkm-structure.md  pkm-taxonomy.md  prd.md
docs/flows/: anotar.md  criar-grupo.md  criar-nota.md  criticar-nota.md  criticar-url.md  processar-url.md  readequar-nota.md  readequar-url.md  recriar-indices.md  reorganizar-topicos.md  triagem.md  validar-estrutura.md
docs/schemas/: frontmatter-conhecimento.md  frontmatter-grupo.md  frontmatter-item.md  nota-conceito.md  nota-ferramenta.md  url-resumo.md
flows/: commit-push.md  criar-nota.md  criticar-url.md  readequar-nota.md  reorganizar-topicos.md  triagem.md
index/: grupos.json  models.json  templates.json  topicos.json
models/: nota-empresa.md  nota-ferramenta.md  nota-livre.md  nota-procedimento.md  sidecar.md  url-extrato.md  url-resumo.md
schemas/: frontmatter-grupo.md  frontmatter-item.md
(+14 files in other folders)
