[project]
name = "processar-url-skill"
version = "0.1.0"
description = "Ambiente Python local da skill processar-url"
requires-python = ">=3.12"
dependencies = [
  "docling>=2.0.0",
  "faster-whisper>=1.1.0",
  "playwright>=1.51.0",
  "pymupdf>=1.25.0",
  "readability-lxml>=0.8.1",
  "requests>=2.32.0",
  "trafilatura>=2.0.0",
  "youtube-transcript-api>=1.2.0",
  "yt-dlp>=2025.1.26",
]

[tool.uv]
package = false
